--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/jiheon-dev/w-secure/issues"
   },
-  "homepage": "https://github.com/jiheon-dev/w-secure#readme"
+  "homepage": "https://github.com/jiheon-dev/w-secure#readme",
+  "dependencies": {
+    "http-proxy": "^1.18.1"
+  }
 }
